--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+# Mac builtin
+.DS_Store
+**/.DS_Store
+.DS_Store?
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
+$py.class
 
 # C extensions
 *.so
@@ -36,7 +42,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit unitest / coverage reports
 htmlcov/
 .tox/
 .nox/
