--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -7,3 +7,9 @@ requests~=2.31.0
 
 sqlalchemy
 mysql-connector-python
+
+python-dotenv>=1.0.0
+python-docx>=0.8.11
+PyPDF2>=3.0.0
+beautifulsoup4>=4.12.0
+scikit-learn>=1.3.0
